# maul

./: LICENSE  README.md  setup.cfg  setup.py
src/maul/: __init__.py  clustering.py
src/maul/CNAK/: cnak.py
