[metadata]
name = maul
version = 0.0.1
author = R. Douglas G. Aquino 
author_email =  aquinordga@gmail.com
description = maul: MAin Useful tools in machine Learning
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = https://https://github.com/aquinordg/maul/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pandas
    numpy
	scikit-learn

[options.packages.find]
where = src